# BrLP

./: .gitignore  README.md  REPR-DATA.md  pyproject.toml
docker/: Dockerfile  readme.md
examples/: confs.example.yaml  input.example.csv
scripts/prepare/: extract_latents.py  prepare_csv.py
scripts/training/: train_autoencoder.py  train_aux.py  train_controlnet.py  train_diffusion_unet.py
src/brlp/: __init__.py  cli.py  const.py  data.py  gradacc.py  losses.py  networks.py  sampling.py  utils.py
